testsuite/tests/dependent/should_fail/T13895.stderr

T13895.hs:10:14: error:
    • Illegal constraint in a kind: forall k. Typeable k => k -> *
    • In the type signature:
        dataCast1 :: forall (a :: Type).
                     Data a =>
                     forall (c :: Type -> Type)
                            (t :: forall (k :: Type). Typeable k => k -> Type).
                     Typeable t => (forall d. Data d => c (t d)) -> Maybe (c a)
